public class Cauchito {
    private Estado estado;

    public Cauchito(){
        this.estado = new Estado();
    }
}
